--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dashboard-styles.css">
-    <link rel="stylesheet" href="/css/analysis.css">
+    <link rel="stylesheet" href="/frontend/css/analysis.css">
     <link href="/frontend/dashboard-fix.css" rel="stylesheet">
 </head>
 <body>
@@ -444,7 +444,7 @@
         import digitalTwinAPI from './api.js';
         window.digitalTwinAPI = digitalTwinAPI; // Make it globally available
     </script>
-    <script src="/js/patient-analysis.js"></script>
+    <script src="/frontend/js/patient-analysis.js"></script>
     <script>
     // IMMEDIATE FIX: Dashboard Functionality
     (function() {
